<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_sky"
    tools:context=".SessionActivity" >

    <Button
        android:id="@+id/button_add_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="addSession"
        android:text="@string/add_btn"
        android:width="150dp"
        android:background="@layout/button_style_small" />

    <Button
        android:id="@+id/button_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_add_session"
        android:layout_alignBottom="@+id/button_add_session"
        android:layout_alignLeft="@+id/listViewSessions"
        android:onClick="refreshSessions"
        android:text="@string/refresh_btn"
        android:width="120dp"
        android:background="@layout/button_style_small" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/listViewSessions"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/listViewSessions"
        android:ems="20"
        android:hint="@string/player_name" >

        <requestFocus />
    </EditText>

    <ListView
        android:id="@+id/listViewSessions"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignRight="@+id/button_add_session"
        android:layout_centerVertical="true"
        android:layout_margin="2dp" >

    </ListView>

    <TextView
        android:id="@+id/textViewLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/progressBar"
        android:layout_below="@+id/progressBar"
        android:text="@string/loading"
        android:textSize="12sp" />
    <TextView
        android:id="@+id/textViewCreating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/progressBar"
        android:layout_below="@+id/progressBar"
        android:text="@string/creating"
        android:textSize="12sp" />
    <TextView
        android:id="@+id/textViewJoining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/progressBar"
        android:layout_below="@+id/progressBar"
        android:text="@string/joining"
        android:textSize="12sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/listViewSessions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp" />

</RelativeLayout>
