<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_sky"
    tools:context=".StartMenuActivity" >

    <Button
        android:id="@+id/button_2p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_1p"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:onClick="playTwoPlayer"
        android:text="@string/two_player_btn"
        android:width="200dp"
        android:background="@layout/button_style" />

    <Button
        android:id="@+id/button_1p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_2p"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:onClick="playOnePlayer"
        android:text="@string/one_player_btn"
        android:width="200dp"
        android:background="@layout/button_style" />

    <Button
        android:id="@+id/button_online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_2p"
        android:layout_below="@+id/button_2p"
        android:layout_marginTop="30dp"
        android:onClick="playOnline"
        android:text="@string/online_btn"
        android:width="200dp"
        android:background="@layout/button_style" />

    <Button
        android:id="@+id/button_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_online"
        android:layout_below="@+id/button_online"
        android:layout_marginTop="30dp"
        android:onClick="about"
        android:text="@string/about_btn"
        android:width="200dp"
        android:background="@layout/button_style" />

    <ImageButton
        android:id="@+id/imageButtonSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="switchSoundOnOff"
        android:contentDescription="@string/switch_sound"
        android:background="@drawable/volume_on" />
    
</RelativeLayout>
